# cinder-city

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/scripts/: update_gallery.py  update_loc.py
.github/workflows/: loc.yml
assets/: city.json
shaders/: grid_floor.frag  grid_floor.vert  ground.frag  ground.vert  solid_color.frag  solid_color.vert  textured.frag  textured.vert
src/: main.cpp
src/engine/assets/: fbx_loader.cpp  fbx_loader.hpp  model_catalog.cpp  model_catalog.hpp  stb_image_impl.cpp  texture_catalog.cpp  texture_catalog.hpp
src/engine/core/: application.cpp  application.hpp  log.cpp  log.hpp  platform.cpp  platform.hpp  window.cpp  window.hpp
src/engine/editor/: ui.cpp  ui.hpp
src/engine/render/: gpu_buffer.cpp  gpu_buffer.hpp  gpu_mesh.cpp  gpu_mesh.hpp  graphics_device.cpp  graphics_device.hpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/engine/scene/: camera.hpp  scene_loader.cpp  scene_loader.hpp  transform.hpp
src/engine/world/: cube.cpp  cube.hpp  entity.hpp  ground.cpp  ground.hpp  player.cpp  player.hpp  static_prop.hpp  world.hpp
